Actions
Bug #11924
closedinfinite loop in mdb ::load
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
http://smartos.org/bugview/OS-7935
This loops forever:
::load /.a
because the attempt to look for a .so.1 suffix repeatedly just finds the ".a" then loops.
Fix it by only doing the strrchr('.') at most twice.
Now:
::load /.a
mdb: no module '/.a' could be found
::load random
Updated by Electric Monk over 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 4c05824a49c53dcd087c0babf8780068997f0735
commit 4c05824a49c53dcd087c0babf8780068997f0735 Author: Mark Brooks <mark.brooks@joyent.com> Date: 2019-11-07T11:30:31.000Z 11924 infinite loop in mdb ::load Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions